--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
+    "sweetalert2": "^11.12.1",
+    "tslib": "^2.6.3",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
